Added a Destination Folder

--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
+ "destinationfolder": "Z:\\BaikalBackup\\",
  "calendars": [
   {"url":"https://dav.yourdomain.com/remote.php/dav/calendars/<youruser>/<yourcalendar>/?export",
    "user":"<username>",
